--- a/platformio.ini
+++ b/platformio.ini
@@ -13,14 +13,11 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
-; Can be crlf,cr,lf,none. Crlf is default.
 monitor_eol = CRLF
-
-; Can be yes,no. No is default.
 monitor_echo = yes
-
-monitor_filters =
-    send_on_enter
+monitor_filters = 
+	send_on_enter
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.6
 	z3t0/IRremote@^4.4.0
+	bblanchon/ArduinoJson@^7.2.0
